Bug 476153 - Sometimes crashes on launch in Quotient::RoomEvent::id()
Summary: Sometimes crashes on launch in Quotient::RoomEvent::id()
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-27 13:38 UTC by Nate Graham
Modified: 2023-10-27 22:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-10-27 13:38:05 UTC
I just built the world from git master today, and NeoChat crashed on launch twice.

First time it just crashed. Second time, it crashed after I entered my kwallet password to unlock the wallet. Third time it did neither and ran successfully.


Backtrace:

Application: NeoChat (neochat), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = 0x0}
[KCrash Handler]
#5  0x00007f3e01427837 in QJsonObject::value(QLatin1String) const () at /lib64/libQt6Core.so.6
#6  0x00007f3e0398225c in QJsonObject::operator[](QLatin1String) const (key=..., this=0x7ffc2c285f48) at /usr/include/qt6/QtCore/qjsonobject.h:61
#7  Quotient::RoomEvent::id() const (this=this@entry=0x0) at /home/nate/kde/src/libquotient/Quotient/events/roomevent.cpp:24
#8  0x00000000006a09f1 in MessageEventModel::createEventObjects(Quotient::RoomMessageEvent const*) (this=this@entry=0x2715890, event=event@entry=0x0) at /home/nate/kde/src/neochat/src/models/messageeventmodel.cpp:710
#9  0x00000000006a267f in operator()(Quotient::RoomEventsRange) const (__closure=0x4a876b0, events=...) at /home/nate/kde/src/neochat/src/models/messageeventmodel.cpp:123
#10 0x00007f3e013de3a4 in void doActivate<false>(QObject*, int, void**) () at /lib64/libQt6Core.so.6
#11 0x00007f3e0392e2d4 in Quotient::Room::aboutToAddNewMessages(Quotient::Range<std::vector<std::unique_ptr<Quotient::RoomEvent, std::default_delete<Quotient::RoomEvent> >, std::allocator<std::unique_ptr<Quotient::RoomEvent, std::default_delete<Quotient::RoomEvent> > > > >) (this=<optimized out>, _t1=...) at /home/nate/kde/build6/libquotient/QuotientQt6_autogen/include/moc_room.cpp:3135
#12 0x00007f3e0394c580 in Quotient::Room::Private::addNewMessageEvents(std::vector<std::unique_ptr<Quotient::RoomEvent, std::default_delete<Quotient::RoomEvent> >, std::allocator<std::unique_ptr<Quotient::RoomEvent, std::default_delete<Quotient::RoomEvent> > > >&&) (this=this@entry=0x3c24bf0, events=...) at /home/nate/kde/src/libquotient/Quotient/room.cpp:2956
#13 0x00007f3e0394def4 in Quotient::Room::Private::addNewMessageEvents(std::vector<std::unique_ptr<Quotient::RoomEvent, std::default_delete<Quotient::RoomEvent> >, std::allocator<std::unique_ptr<Quotient::RoomEvent, std::default_delete<Quotient::RoomEvent> > > >&&) (events=..., this=0x3c24bf0) at /usr/include/c++/13/bits/stl_iterator.h:1076
#14 Quotient::Room::updateData(Quotient::SyncRoomData&&, bool) (this=0x3c269a0, data=..., fromCache=false) at /home/nate/kde/src/libquotient/Quotient/room.cpp:1953
#15 0x00007f3e013cfe67 in QObject::event(QEvent*) () at /lib64/libQt6Core.so.6
#16 0x00007f3e025c0af8 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt6Widgets.so.6
#17 0x00007f3e0137cdc8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt6Core.so.6
#18 0x00007f3e013808e5 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /lib64/libQt6Core.so.6
#19 0x00007f3e0162106f in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /lib64/libQt6Core.so.6
#20 0x00007f3dfed134fc in g_main_context_dispatch () at /lib64/libglib-2.0.so.0
#21 0x00007f3dfed716b8 in g_main_context_iterate.isra () at /lib64/libglib-2.0.so.0
#22 0x00007f3dfed10b83 in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#23 0x00007f3e0162090f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Core.so.6
#24 0x00007f3e01389a03 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt6Core.so.6
#25 0x00007f3e013856ad in QCoreApplication::exec() () at /lib64/libQt6Core.so.6
#26 0x0000000000433be6 in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /home/nate/kde/src/neochat/src/main.cpp:245
[Inferior 1 (process 63124) detached]
Comment 1 Nate Graham 2023-10-27 13:38:57 UTC
Also seems to crash with the same backtrace to the "KDE Chat" room.
Comment 2 Bug Janitor Service 2023-10-27 19:46:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1368
Comment 3 Tobias Fella 2023-10-27 22:21:26 UTC
Git commit f690b76efaa43a0aa135f5943545aeba59ed7ca9 by Tobias Fella.
Committed on 27/10/2023 at 22:11.
Pushed by tfella into branch 'master'.

Fix crash for events that are not RoomMessageEvents

M  +4    -3    src/models/messageeventmodel.cpp

https://invent.kde.org/network/neochat/-/commit/f690b76efaa43a0aa135f5943545aeba59ed7ca9