Fix crash for events that are not RoomMessageEvents

BUG: 476153